--- a/circle.yml
+++ b/circle.yml
@@ -34,6 +34,7 @@ deployment:
       - npm run build
       - git add -f lib
       - git add -f lib_es6
+      - git add -f docs
       - git commit --allow-empty -m $'generated from:'"$CIRCLE_SHA1"$'\ntriggered by:'"$CIRCLE_USERNAME"$'\n[ci skip]'
       - git tag -a $'master_'"$CIRCLE_BUILD_NUM" -m "master"
       - git push origin master --follow-tags
