--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "_cp_d.ts_files_deep": "copyfiles -u 1 'lib_es6/**/*.d.ts' lib",
     "cp_d.ts_files": "npm run _cp_d.ts_files_shallow && npm run _cp_d.ts_files_deep ",
     "build_lib": "npm run build_es6 && npm run es6_to_es5 && npm run cp_d.ts_files",
-    "prepublish1": "npm run clean && npm run build",
+    "prepublish": "npm run clean && npm run build",
     "compile_doc_webpack": "tsc docs_src/webpack/build.ts",
     "build": "npm run build_lib && npm run compile_doc_webpack && webpack --config docs_src/webpack/build.js",
     "run_doc": "npm run compile_doc_webpack && webpack-dev-server --config docs_src/webpack/build.js",
