--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ deployment:
       - git config user.email "devdoomari@gmail.com"
       - git config user.name "devdoomari.circleci"
       - git checkout -b master
-      - git pull origin develop
+      - git pull
       - git merge -X theirs --no-edit develop
       - npm run build
       - git add -f lib
