--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "scripts": {
-    "clean": "rm -rf lib_es6 lib docs_src/webpack/*.js dist docs",
+    "clean": "rm -rf lib_es6 lib docs_src/webpack/*.js dist docs docs_ts_processed react-konva.d.ts",
     "build_es6": "tsc --project tsconfig.lib.json",
     "es6_to_es5": "babel lib_es6 --out-dir lib",
-    "_cp_d.ts_files_shallow": "copyfiles --up 1 'lib_es6/*.d.ts' lib",
-    "_cp_d.ts_files_deep": "copyfiles -u 1 'lib_es6/**/*.d.ts' lib",
-    "cp_d.ts_files": "npm run _cp_d.ts_files_shallow && npm run _cp_d.ts_files_deep ",
-    "build_lib": "npm run build_es6 && npm run es6_to_es5 && npm run cp_d.ts_files",
+    "build_lib": "npm run build_es6 && npm run es6_to_es5",
     "prepublish": "npm run clean && npm run build",
-    "compile_doc_webpack": "tsc docs_src/webpack/build.ts",
+    "compile_doc_webpack": "node dts-generator.js && tsc docs_src/webpack/build.ts",
     "build": "npm run build_lib && npm run compile_doc_webpack && webpack --config docs_src/webpack/build.js",
     "run_doc": "npm run compile_doc_webpack && webpack-dev-server --config docs_src/webpack/build.js",
-    "storybook": "start-storybook -p 7001",
-    "build-storybook": "build-storybook",
+    "storybook": "tsc && start-storybook -c .storybook -p 7001 -s vs",
+    "build_storybook": "tsc && build-storybook -c .storybook -o storybook-built",
     "test": "npm run unittest",
     "unittest": "jest --config src/__unittests__/jest_unittests.json"
   },
@@ -25,19 +22,20 @@
   "author": "devdoomari <devdoomari __at__ gmail dotttt commmm>",
   "license": "Personal",
   "devDependencies": {
-    "@kadira/react-storybook-addon-info": "^3.3.0",
-    "@kadira/storybook": "^2.21.0",
+    "@storybook/react": "^3.1.3",
     "@types/chai": "^3.4.34",
-    "@types/history": "^4.5.0",
+    "@types/core-decorators": "^0.10.30",
+    "@types/history": "^3.2.1",
     "@types/jest": "^16.0.4",
-    "@types/lodash": "^4.14.50",
+    "@types/lodash": "^4.14.64",
     "@types/node": "^7.0.4",
     "@types/react": "^15.0.4",
     "@types/react-bootstrap": "^0.0.43",
     "@types/react-dom": "^0.14.21",
     "@types/react-router": "^3.0.0",
     "@types/sinon": "^1.16.34",
-    "@types/webpack": "^2.2.4",
+    "@types/storybook__react": "^3.0.0",
+    "@types/webpack": "^2.2.15",
     "babel-cli": "^6.18.0",
     "bootstrap": "^3.3.7",
     "brace": "^0.9.1",
@@ -46,16 +44,17 @@
     "console-polyfill": "^0.2.3",
     "copy-webpack-plugin": "^4.0.1",
     "copyfiles": "^1.0.0",
+    "core-decorators": "^0.15.0",
     "css-loader": "^0.26.1",
+    "dts-generator": "^2.1.0",
     "file-loader": "^0.10.0",
     "fs": "0.0.1-security",
-    "gl": "^4.0.3",
     "history": "^4.5.1",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "latest",
-    "jest-cli": "latest",
+    "jest": "19.0.2",
+    "jest-cli": "19.0.2",
     "json-stringify-safe": "^5.0.1",
-    "konva": "^1.3.0",
+    "konva": "^1.6.3",
     "lodash": "^4.17.4",
     "monaco-editor": "^0.8.1",
     "pixi.js": "^4.3.4",
@@ -66,15 +65,16 @@
     "react-monaco-editor": "^0.7.3",
     "react-router": "^3.0.2",
     "react-static-webpack-plugin": "^2.1.0",
-    "reactive-renderer": "git+ssh://git@github.com/react-stream-libs/reactive-renderer#dist_15",
+    "reactive-renderer": "git+ssh://git@github.com:react-stream-libs/reactive-renderer.git#dist_92",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
     "testdouble": "^1.11.0",
     "ts-loader": "^2.0.0",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.5",
+    "tslint": "^5.4.2",
+    "tslint-microsoft-contrib": "^5.0.0",
+    "typescript": "^2.3.4",
     "typescript-babel-jest": "latest",
     "url-loader": "^0.5.7",
     "webpack": "2.2.0",
