--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-monaco-editor": "^0.7.3",
     "react-router": "^3.0.2",
     "react-static-webpack-plugin": "^2.1.0",
-    "reactive-renderer": "git+ssh://git@github.com:react-stream-libs/reactive-renderer.git#dist_92",
+    "reactive-renderer": "git+ssh://git@github.com/react-stream-libs/reactive-renderer.git#dist_feature/add-context_94",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
     "static-site-generator-webpack-plugin": "^3.1.0",
