--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "clean": "rm -rf lib_es6 lib docs_src/webpack/*.js dist docs docs_ts_processed react-konva.d.ts",
+    "clean": "rm -rf lib_es6 lib docs_src/webpack/*.js dist docs docs_ts_processed react-konva.d.ts storybook-built",
     "build_es6": "tsc --project tsconfig.lib.json",
     "es6_to_es5": "babel lib_es6 --out-dir lib",
     "build_lib": "npm run build_es6 && npm run es6_to_es5",
@@ -46,6 +46,7 @@
     "copyfiles": "^1.0.0",
     "core-decorators": "^0.15.0",
     "css-loader": "^0.26.1",
+    "dom-css": "^2.1.0",
     "dts-generator": "^2.1.0",
     "file-loader": "^0.10.0",
     "fs": "0.0.1-security",
@@ -57,6 +58,7 @@
     "konva": "^1.6.3",
     "lodash": "^4.17.4",
     "monaco-editor": "^0.8.1",
+    "perfnow": "^0.2.0",
     "pixi.js": "^4.3.4",
     "raw-loader": "^0.5.1",
     "react": "^15.4.2",
@@ -65,7 +67,10 @@
     "react-monaco-editor": "^0.7.3",
     "react-router": "^3.0.2",
     "react-static-webpack-plugin": "^2.1.0",
-    "reactive-renderer": "git+ssh://git@github.com/react-stream-libs/reactive-renderer.git#dist_feature/add-context_94",
+    "react-style-streamed-elem": "git+ssh://git@github.com/react-stream-libs/react-style-streamed-elem.git#dist_feature/test-ref-direct_15",
+    "reactive-renderer": "git+ssh://git@github.com/react-stream-libs/reactive-renderer.git#dist_feature/add-context---babelrc-test_114",
+    "recompose": "^0.23.5",
+    "rxjs": "^5.4.1",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
     "static-site-generator-webpack-plugin": "^3.1.0",
@@ -79,9 +84,6 @@
     "url-loader": "^0.5.7",
     "webpack": "2.2.0",
     "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "dom-css": "^2.1.0"
   },
   "peerDependencies": {
     "konva": "^1.3.0"
