--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": false,
@@ -22,6 +22,7 @@
   "exclude": [
     "storybook-ts",
     "docs", "docs_src",
+    "docs_ts_processed",
     "node_modules",
     "!node_modules/rxjs",
     "reactive-konva",
@@ -31,7 +32,8 @@
     "lib_es6",
     "examples",
     "src_old",
-    "webpack"
+    "webpack",
+    "types"
   ],
   "compileOnSave": false,
   "typescript.tsdk": "./node_modules/typescript/lib"
